--- a/README.adoc
+++ b/README.adoc
@@ -1,14 +1,19 @@
 = APK Deploy Tool
 :name: apk-deploy-tool
 :gh-name: jirutka/{name}
-:version: 0.0.0
+:version: 0.2.2
 
 TODO
 
 
 == Requirements
 
-TODO
+* http://pubs.opengroup.org/onlinepubs/9699919799/utilities/V3_chap02.html[POSIX-sh] compatible shell with `pipefail` support (e.g. Busybox ash, ZSH, bash, …)
+* cut, grep, sed, tar (both GNU and Busybox are supported)
+* https://github.com/alpinelinux/apk-tools[apk-tools]
+* ssh-keygen from OpenSSH
+* sudo
+* https://github.com/OpenRC/openrc[OpenRC] init system (for restarting services)
 
 
 == Installation
